refactoring build